--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Brian Pinto
-logo: /assets/img/self.HEIC
+logo: /assets/images/self.HEIC
 description: As a data scientist, I utilize data to generate insights that help businesses strategize optimally. My educational background in mathematics and philosophy, along with my varied work history, has propelled me to develop skills in analyzing data and generating intelligible reports. I am motivated to join a diverse team that strives for excellence in any endeavor it undertakes.
 #show_downloads: true
 theme: jekyll-theme-minimal
